projects/vb6parse/snapshots/syntax/library/statements/kill/kill_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/library/statements/file_operations/kill.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: KillStatement
      children:
        - kind: KillKeyword
          text: Kill
        - kind: Whitespace
          text: "    "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"C:\\\\file.txt\""
        - kind: Whitespace
          text: "    "
    - kind: Newline
      text: "\n"
